--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,10 @@ android {
 
 dependencies {
     implementation 'com.google.android.material:material:1.0.0'
-    //noinspection GradleCompatible
-
+    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
+    implementation ("com.squareup.okhttp3:okhttp:4.2.0")
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
