--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,11 @@ android {
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr3'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr3'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr3'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.lecho:hellocharts-android:v1.5.8'
     implementation ("com.squareup.okhttp3:okhttp:4.2.0")
